fixed form-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,9 @@ h2 span {
 
 .contact-p {
   margin-bottom: 20px;
-  font-weight: bold;
+  font-family: "Roboto Slab";
+  font-size: 0.9em;
+  text-align: center;
 }
 
 input,
@@ -322,6 +324,12 @@ textarea {
 
   .product-list {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .form-wrap {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 1000px;
   }
 }
 
